--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -13,7 +13,7 @@ services:
   web:
     build:
       context: .
-      dockerfile: Dockerfile.production
+      dockerfile: Dockerfile
     command: "make ci-check"
     depends_on:
       - postgres
