--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -44,3 +44,8 @@ Metrics/PerceivedComplexity:
   Enabled: false
 Metrics/ClassLength:
   Enabled: false
+Metrics/ParameterLists:
+  Enabled: false
+
+RSpec/MultipleExpectations:
+  Enabled: false
