--- a/config/database.yml
+++ b/config/database.yml
@@ -83,7 +83,7 @@ test:
 # for a full overview on how database connection configuration can be specified.
 #
 production:
-  <<: *default
-  database: whiskeys_grade_production
-  username: whiskeys_grade
-  password: <%= ENV['WHISKEYS_GRADE_DATABASE_PASSWORD'] %>
+  adapter: postgresql
+  encoding: unicode
+  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+  url: <%= ENV['DATABASE_URL'] %>
