--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,8 @@ services:
     image: postgres:12-alpine
     environment:
       POSTGRES_HOST_AUTH_METHOD: trust
+    ports:
+      - '5432:5432'
     volumes:
       - pgdata:/var/lib/postgresql/data
 
