--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "5.2.1",
+    "@reduxjs/toolkit": "^1.5.0",
     "bootstrap": "^5.0.0-beta2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-redux": "^7.2.2",
     "turbolinks": "^5.2.0"
   },
   "version": "0.1.0",
