--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@reduxjs/toolkit": "^1.5.0",
     "axios": "^0.21.1",
     "bootstrap": "^5.0.0-beta2",
+    "classnames": "^2.2.6",
     "lodash": "^4.17.21",
     "rails-erb-loader": "^5.5.2",
     "react": "^17.0.1",
